# earthquake_map

./: .gitignore  earthquakes.html  eq.ipynb  pyproject.toml  readme.md
