[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "amrirasyidi", email = "amri.geodesy@gmail.com"},
]
dependencies = [
    "ipykernel>=6.23.1",
    "ipywidgets>=8.0.6",
    "polars>=0.18.0",
    "matplotlib>=3.7.1",
    "seaborn>=0.12.2",
    "geopandas>=0.13.1",
    "pyarrow>=12.0.0",
    "fastparquet>=2023.4.0",
    "beautifulsoup4>=4.12.2",
    "requests>=2.31.0",
    "mamba>=0.11.2",
]
requires-python = ">=3.11"
license = {text = "MIT"}
